Added basic structure

--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="calculator">
+      <div id="screen">
+        <h1>0</h1>
+      </div>
+      <div id="btn-container">
+        <div id="btn-clear">CLEAR</div>
+        <div id="btn-delete">DELETE</div>
+        <div id="btn-7">7</div>
+        <div id="btn-8">8</div>
+        <div id="btn-9">9</div>
+        <div id="btn-divide">/</div>
+        <div id="btn-4">4</div>
+        <div id="btn-5">5</div>
+        <div id="btn-6">6</div>
+        <div id="btn-multiply">*</div>
+        <div id="btn-1">1</div>
+        <div id="btn-2">2</div>
+        <div id="btn-3">3</div>
+        <div id="btn-subtract">-</div>
+        <div id="btn-point">.</div>
+        <div id="btn-0">0</div>
+        <div id="btn-equals">=</div>
+        <div id="btn-sum">+</div>
+      </div>
+    </div>
+  </body>
 </html>
