--- a/index.html
+++ b/index.html
@@ -11,28 +11,37 @@
   <body>
     <div id="calculator">
       <div id="screen">
-        <h1>0</h1>
+        <span>0</span>
+      </div>
+      <div id="clear-delete-container">
+        <div id="btn-clear"><span>CLEAR</span></div>
+        <div id="btn-delete"><span>DELETE</span></div>
       </div>
       <div id="btn-container">
-        <div id="btn-clear">CLEAR</div>
-        <div id="btn-delete">DELETE</div>
-        <div id="btn-7">7</div>
-        <div id="btn-8">8</div>
-        <div id="btn-9">9</div>
-        <div id="btn-divide">/</div>
-        <div id="btn-4">4</div>
-        <div id="btn-5">5</div>
-        <div id="btn-6">6</div>
-        <div id="btn-multiply">*</div>
-        <div id="btn-1">1</div>
-        <div id="btn-2">2</div>
-        <div id="btn-3">3</div>
-        <div id="btn-subtract">-</div>
-        <div id="btn-point">.</div>
-        <div id="btn-0">0</div>
-        <div id="btn-equals">=</div>
-        <div id="btn-sum">+</div>
+        <div class="calc-btn" id="btn-7">7</div>
+        <div class="calc-btn" id="btn-8">8</div>
+        <div class="calc-btn" id="btn-9">9</div>
+        <div class="calc-btn" id="btn-divide">÷</div>
+        <div class="calc-btn" id="btn-4">4</div>
+        <div class="calc-btn" id="btn-5">5</div>
+        <div class="calc-btn" id="btn-6">6</div>
+        <div class="calc-btn" id="btn-multiply">×</div>
+        <div class="calc-btn" id="btn-1">1</div>
+        <div class="calc-btn" id="btn-2">2</div>
+        <div class="calc-btn" id="btn-3">3</div>
+        <div class="calc-btn" id="btn-subtract">−</div>
+        <div class="calc-btn" id="btn-point">.</div>
+        <div class="calc-btn" id="btn-0">0</div>
+        <div class="calc-btn" id="btn-equals">=</div>
+        <div class="calc-btn" id="btn-sum">+</div>
       </div>
     </div>
+    <footer id="credits">
+      2022 -
+      <a href="https://github.com/marrahenzo"
+        >Hernán Marrapodi
+        <img src="./media/github-logo.png" alt="GitHub Logo" width="30"
+      /></a>
+    </footer>
   </body>
 </html>
