Added classes to delete and clear buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <span>0</span>
       </div>
       <div id="clear-delete-container">
-        <div id="btn-clear"><span>CLEAR</span></div>
-        <div id="btn-delete"><span>DELETE</span></div>
+        <div class="calc-btn" id="btn-clear">CLEAR</div>
+        <div class="calc-btn" id="btn-delete">DELETE</div>
       </div>
       <div id="btn-container">
         <div class="calc-btn" id="btn-7">7</div>
