Made github link open in new tab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="calculator">
       <div id="screen">
-        <span>0</span>
+        <span></span>
       </div>
       <div id="clear-delete-container">
         <div class="calc-btn" id="btn-clear">CLEAR</div>
@@ -38,7 +38,7 @@
     </div>
     <footer id="credits">
       2022 -
-      <a href="https://github.com/marrahenzo"
+      <a href="https://github.com/marrahenzo" target="_blank"
         >Hernán Marrapodi
         <img src="./media/github-logo.png" alt="GitHub Logo" width="30"
       /></a>
