Added top number row to screen and changed credits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <div id="calculator">
       <div id="screen">
-        <span></span>
+        <span id="top-value"></span>
+        <span id="bottom-value"></span>
       </div>
       <div id="clear-delete-container">
         <div class="calc-btn" id="btn-clear">CLEAR</div>
@@ -37,7 +38,7 @@
       </div>
     </div>
     <footer id="credits">
-      2022 -
+      2022 ©
       <a href="https://github.com/marrahenzo" target="_blank"
         >Hernán Marrapodi
         <img src="./media/github-logo.png" alt="GitHub Logo" width="30"
