Revamped button layout

--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
         <span id="top-value"></span>
         <span id="bottom-value"></span>
       </div>
-      <div id="clear-delete-container">
-        <div class="calc-btn" id="btn-clear">CLEAR</div>
-        <div class="calc-btn" id="btn-delete">DELETE</div>
-      </div>
       <div id="btn-container">
+        <div class="calc-btn" id="btn-clear">CLR</div>
+        <div class="calc-btn" id="btn-delete">DEL</div>
+        <div class="calc-btn" id="btn-modulo">%</div>
+        <div class="calc-btn" id="btn-divide">÷</div>
         <div class="calc-btn" id="btn-7">7</div>
         <div class="calc-btn" id="btn-8">8</div>
         <div class="calc-btn" id="btn-9">9</div>
-        <div class="calc-btn" id="btn-divide">÷</div>
+        <div class="calc-btn" id="btn-multiply">×</div>
         <div class="calc-btn" id="btn-4">4</div>
         <div class="calc-btn" id="btn-5">5</div>
         <div class="calc-btn" id="btn-6">6</div>
-        <div class="calc-btn" id="btn-multiply">×</div>
+        <div class="calc-btn" id="btn-subtract">−</div>
         <div class="calc-btn" id="btn-1">1</div>
         <div class="calc-btn" id="btn-2">2</div>
         <div class="calc-btn" id="btn-3">3</div>
-        <div class="calc-btn" id="btn-subtract">−</div>
-        <div class="calc-btn" id="btn-point">.</div>
-        <div class="calc-btn" id="btn-0">0</div>
-        <div class="calc-btn" id="btn-equals">=</div>
         <div class="calc-btn" id="btn-sum">+</div>
+        <div class="calc-btn" id="btn-0">0</div>
+        <div class="calc-btn" id="btn-point">.</div>
+        <div class="calc-btn" id="btn-equals">=</div>
       </div>
     </div>
     <footer id="credits">
