Removed top value row from screen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <body>
     <div id="calculator">
       <div id="screen">
-        <span id="top-value"></span>
-        <span id="bottom-value"></span>
+        <span id="screen-value"></span>
       </div>
       <div id="btn-container">
         <div class="calc-btn" id="btn-clear">CLR</div>
